<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_rate"
        android:textStyle="bold"
        android:layout_margin="50dp"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_name"
        android:inputType="textAutoComplete"
        />
    <EditText
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:autofillHints="a number between 1 to 100"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/rateFalse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_false"
        android:textColor="@color/red"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/rateTrue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_true"
        android:textColor="@color/green"
        android:visibility="invisible" />

    <Button
        android:id="@+id/submit123"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>


</LinearLayout>