<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/alert_checkbox" />-->
<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/welcome_text" />-->
<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="10dp"-->
<!--        android:layout_weight="1"-->
<!--        android:gravity="top"-->
<!--        android:hint="@string/welcome_text" />-->
<!--    <Button-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="right"-->
<!--        android:text="@string/welcome_text" />-->
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_margin="50dp"/>

    <TextView
        android:id="@+id/alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="center"
        android:text="@string/alert_checkbox"
        android:textColor="@color/red"
        android:paddingLeft="28dp"
        android:visibility="invisible"/>

    <CheckBox
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/privacy"
        android:textAlignment="center"
        android:layout_margin="0dp"
        />
    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/start"
        android:textAlignment="center"
        />
</LinearLayout>